--- a/brendel_kaggle_dont_overfit2.nb.html
+++ b/brendel_kaggle_dont_overfit2.nb.html
@@ -181,11 +181,14 @@ $(document).ready(function () {
 <p>Load and inspect data</p>
 <!-- rnb-text-end -->
 <!-- rnb-chunk-begin -->
+<!-- rnb-source-begin eyJkYXRhIjoiYGBgclxuYWZkc1xuYGBgIn0= -->
+<pre class="r"><code>afds</code></pre>
+<!-- rnb-source-end -->
 <!-- rnb-chunk-end -->
 <!-- rnb-text-begin -->
 <!-- rnb-text-end -->
 
-<div id="rmd-source-code">LS0tCnRpdGxlOiAiS2FnZ2xlIC0gRG9uJ3QgT3ZlcmZpdCAyIgpvdXRwdXQ6IGh0bWxfbm90ZWJvb2sKZGF0ZTogMjAxOS0wNC0xNgotLS0KCkxvYWQgYW5kIGluc3BlY3QgZGF0YQoKYGBge3J9CgpgYGAKCgo=</div>
+<div id="rmd-source-code">LS0tCnRpdGxlOiAiS2FnZ2xlIC0gRG9uJ3QgT3ZlcmZpdCAyIgpvdXRwdXQ6IGh0bWxfbm90ZWJvb2sKZGF0ZTogMjAxOS0wNC0xNgotLS0KCkxvYWQgYW5kIGluc3BlY3QgZGF0YQoKYGBge3J9CmFmZHMKYGBgCgoK</div>
 
 
 
